--- a/res/layout/dir_list_item.xml
+++ b/res/layout/dir_list_item.xml
@@ -4,53 +4,56 @@
     android:layout_height="match_parent"
     android:layout_margin="6dp"
     android:descendantFocusability="blocksDescendants" >
-    <CheckBox 
+
+    <CheckBox
         android:id="@+id/chk_item_selecting"
-        android:layout_height="wrap_content"
         android:layout_width="wrap_content"
-        android:layout_alignParentLeft="true" 
-        android:layout_centerVertical="true"
-        />
-    
-    <ImageView 
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_centerVertical="true" />
+
+    <ImageView
         android:id="@+id/img_item_icon"
-        android:layout_height="60dp"
         android:layout_width="60dp"
-       	android:layout_toRightOf="@id/chk_item_selecting"
-       	android:src="@drawable/folder"
-       	android:layout_centerVertical="true"/>
-    
-    <TextView 
+        android:layout_height="60dp"
+        android:layout_centerVertical="true"
+        android:layout_toRightOf="@id/chk_item_selecting"
+        android:src="@drawable/folder" />
+
+    <TextView
         android:id="@+id/txt_item_name"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-       	android:layout_alignTop="@id/img_item_icon"
-       	android:layout_toRightOf="@id/img_item_icon"
-       	
-       	android:text="Tesing"
-       	android:layout_marginTop="5dp"/>
-    
-    <TextView 
+        android:layout_alignTop="@id/img_item_icon"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="5dp"
+        android:layout_toLeftOf="@+id/txt_item_date"
+        android:layout_toRightOf="@id/img_item_icon"
+        android:singleLine="true"
+        android:text="Tesing"
+        android:textSize="18sp" />
+
+    <TextView
         android:id="@+id/txt_item_content"
-        android:layout_height="wrap_content"
         android:layout_width="wrap_content"
-        android:layout_below="@id/txt_item_name"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@id/img_item_icon"
+        android:layout_marginTop="7dp"
+        android:paddingBottom="10dp"
         android:layout_toRightOf="@id/img_item_icon"
         android:text="Tesing"
-        android:layout_marginTop="5dp"
-        android:textSize="12sp"/>
-    
-    <TextView 
+        android:textSize="12sp" />
+
+    <TextView
         android:id="@+id/txt_item_date"
-        android:layout_height="wrap_content"
         android:layout_width="wrap_content"
-       	android:layout_alignParentRight="true"
-       	android:text="Tesing"
-       	android:textSize="12dp"
-       	android:textStyle="italic"
-       	
-       	android:layout_alignTop="@id/img_item_icon"
-       	android:layout_marginTop="5dp"
-        android:paddingRight="15dp"/>
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignTop="@id/img_item_icon"
+        android:layout_marginTop="5dp"
+        android:paddingRight="15dp"
+        android:text="Tesing"
+        android:textSize="12dp"
+        android:textStyle="italic" />
 
 </RelativeLayout>
