--- a/res/layout/file_list_item.xml
+++ b/res/layout/file_list_item.xml
@@ -1,61 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_margin="6dp"
-    android:paddingTop="5dp"
-    android:paddingBottom="1dp"
-    android:background="?android:attr/activatedBackgroundIndicator"
-    android:descendantFocusability="blocksDescendants"
-    android:paddingLeft="@dimen/activity_horizontal_margin" >
+<merge xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/chk_item_selecting"
+        android:id="@+id/c_chk_item_selecting"
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true" />
 
     <ImageView
-        android:id="@+id/img_item_icon"
+        android:id="@+id/c_img_item_icon"
         android:layout_width="52dp"
         android:layout_height="52dp"
         android:layout_centerVertical="true"
-        android:layout_toRightOf="@id/chk_item_selecting"
-        android:src="@drawable/folder" />
+        android:src="@drawable/picture"
+        android:layout_toEndOf="@id/c_chk_item_selecting" />
 
     <TextView
-        android:id="@+id/txt_item_name"
+        android:id="@+id/c_txt_item_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@id/img_item_icon"
+        android:layout_alignTop="@id/c_img_item_icon"
         android:layout_marginRight="10dp"
-        android:layout_toLeftOf="@+id/txt_item_date"
-        android:layout_toRightOf="@id/img_item_icon"
+        android:layout_toLeftOf="@+id/c_txt_item_date"
+        android:layout_toRightOf="@id/c_img_item_icon"
         android:singleLine="true"
         android:text="Tesing"
         android:textSize="18sp" />
 
     <TextView
-        android:id="@+id/txt_item_content"
+        android:id="@+id/c_txt_item_content"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@id/img_item_icon"
+        android:layout_alignBottom="@id/c_img_item_icon"
         android:layout_marginTop="7dp"
-        android:layout_toRightOf="@id/img_item_icon"
+        android:layout_toRightOf="@id/c_img_item_icon"
         android:text="Tesing"
         android:textSize="12sp" />
 
     <TextView
-        android:id="@+id/txt_item_date"
+        android:id="@+id/c_txt_item_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        android:layout_alignTop="@id/img_item_icon"
+        android:layout_alignTop="@id/c_img_item_icon"
         android:layout_marginTop="5dp"
         android:paddingRight="15dp"
         android:text="Tesing"
         android:textSize="12sp"
         android:textStyle="italic" />
 
-</RelativeLayout>
+</merge>
