--- a/res/menu/facade.xml
+++ b/res/menu/facade.xml
@@ -3,9 +3,25 @@
     tools:context="com.fivesecs.explorer.Facade" >
 
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_search"
         android:orderInCategory="100"
+        android:showAsAction="always"
+        android:icon="@drawable/ic_search_18pt_3x"
+        android:title="@string/action_settings"/>
+    <item
+        android:id="@+id/action_copy"
+        android:orderInCategory="200"
         android:showAsAction="never"
         android:title="@string/action_settings"/>
+    <item
+        android:id="@+id/action_cut"
+        android:orderInCategory="300"
+        android:showAsAction="never"
+        android:title="@string/action_settings"/>
+    <item
+        android:id="@+id/action_delete"
+        android:orderInCategory="400"
+        android:showAsAction="never"
+        android:title="Delete"/>
 
 </menu>
