--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+
+    <color name="primary">#3F51B5</color>
+    <color name="primaryDark">#1A237E</color>
+    <color name="accent">#1FA8DA</color>
+    <color name="list_item_text">#333</color>
+    
+    <color name="primary_text">#FFFFFF</color>
+    <color name="secondary_text">#727272</color>
+    <color name="icons">#212121</color>
+    <color name="divider">#B6B6B6</color>
+
 </resources>
